--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <td>⭐⭐⭐⭐⭐</td>
             </tr>
             <tr>
-                <td>Editar Videos</td>
+                <td>Editor Videos</td>
                 <td>⭐⭐⭐</td>
             </tr>
         </tbody>
